welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: type mismatch;
 found   : Int(1)
 required: Boolean
  if(vacation==true && 1 || 2 ||3||4||5){
                       ^alarmClock:5: error: type mismatch;
 found   : Int(0)
 required: Boolean
  else if (vacation==true && 0||6){
                             ^alarmClock:8: error: type mismatch;
 found   : Int(1)
 required: Boolean
  else if (vacation == false && 1 || 2 ||3||4||5){
                                ^