welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
  if(vacation==true && 1 || 2 ||3||4||5){
    return "10:00"
  }
  else if (vacation==true && 0||6){
    return "off"
  }
  else if (vacation == false && 1 || 2 ||3||4||5){
    return "7:00"
  }
  else{
    return "10:00"
  }
}